--- a/app/src/main/res/layout/explore.xml
+++ b/app/src/main/res/layout/explore.xml
@@ -1,13 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <TextView
-        android:id="@+id/textView"
+    <SearchView
+        android:id="@+id/search_area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Explore maaan"
-        android:textSize="40sp"/>
-</LinearLayout>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" >
+
+    </SearchView>
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:weightSum="3"-->
+        <!--android:orientation="horizontal">-->
+
+
+        <!--<ImageView-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:src="@drawable/user"/>-->
+
+        <!--<ImageView-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:src="@drawable/user"/>-->
+
+        <!--<ImageView-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:src="@drawable/user"/>-->
+
+
+        <!--<ImageView-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:src="@drawable/user"/>-->
+
+        <!--<ImageView-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:src="@drawable/user"/>-->
+        <!--<ImageView-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:src="@drawable/user"/>-->
+
+    <!--</LinearLayout>-->
+</RelativeLayout>
