--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -1,14 +1,19 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_profile"
         android:title="@string/profile"
+        android:enabled="true"
         android:icon="@drawable/ic_person_black_24dp" />
     <item
         android:id="@+id/action_post"
         android:title="@string/post"
+        android:enabled="true"
         android:icon="@drawable/ic_add_a_photo_black_24dp" />
     <item
         android:id="@+id/action_explore"
         android:title="@string/explore"
+        android:enabled="true"
         android:icon="@drawable/ic_explore_black_24dp" />
 </menu>
