--- a/app/src/main/res/layout/explore.xml
+++ b/app/src/main/res/layout/explore.xml
@@ -7,7 +7,7 @@
 
     <SearchView
         android:id="@+id/search_area"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" >
